<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary2"
    tools:context=".ui.AddProductOwner.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:elevation="4dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/id_btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/CD_ic_back"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/primary" />

            <TextView
                android:id="@+id/id_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_product_title"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_description_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_hint"
            android:background="@drawable/imput_background"
            android:padding="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/et_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price_hint"
            android:background="@drawable/imput_background"
            android:padding="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/dashed_border_background"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:layout_marginBottom="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_file_upload_24"
                android:contentDescription="@string/upload_photo_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_photo_hint"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/btn_upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_photo_button"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="18dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_description_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="18dp"/>

        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</ScrollView>
