<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary2"
    tools:context=".ui.main.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="45dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/imput_background"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/username_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:padding="11dp"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:fontFamily="@font/poppins_light"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:background="@drawable/imput_background"
                android:padding="11dp"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/ivTogglePassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_centerVertical="true"
                android:src="@drawable/baseline_visibility_24" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/button_rounded"
            android:textColor="@color/white"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_prompt"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:layout_marginBottom="24dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:fontFamily="@font/poppins_medium"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_outline"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/continue_with_google"
            android:textColor="@color/primary3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_facebook"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/button_outline"
            android:textColor="@color/primary3" />


    </LinearLayout>

</ScrollView>